# truc_ade

./: Cargo.toml  Dockerfile  README.md  TODO.md  TODO_current_working_on.md  ade_request_test_ICAL.ics  ade_request_test_VCAL.txt  cal1.ics  cal2.ics  default.nix  docker-compose.yaml  flake.nix  lint.sh  process.md
ade/: Cargo.toml
ade/src/: main.rs
src/: caching.rs  calendar_parsing.rs  cli_params.rs  free_rooms.rs  main.rs  networking.rs  utils.rs
src/caching/: cal_caching.rs
src/calendar_parsing/: parsing.rs  rooms.rs
src/cli_params/: arg_parsing.rs
src/free_rooms/: ade_api_handling.rs  request_handling.rs
src/networking/: ade_api_handling.rs  request_handling.rs
src/utils/: modes.rs  noise_levels.rs  rooms.rs
tests/: test_ade.rs
