[package]
name = "ade"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
icalendar = "0.17.3"
itertools = "0.7.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "*", features = ["full"] }
futures = "0.3.31"
form_urlencoded = "*"
