[package]
name = "ade"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
icalendar = "0.17.3"
itertools = "0.7.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
tokio = { version = "*", features = ["full"] }
futures = "0.3.31"
serde_json = "1.0"
axum = "0.8.8"
tracing = "0.1"
tracing-subscriber = "0.3.22"
